# floe-mem

./: .gitignore  README.md  package.json  pyproject.toml
floe/runtime/scripts/: memory.ts
floe/skills/context-memory/: SKILL.md
floe/skills/floe-memory/: SKILL.md
install/: floe-mem.mjs  manifest.yml  postinstall.mjs
memory_service/: __init__.py  cli.py  service.py
prompts/: implementer-system-prompt.md  planner-intake-prompt.md
scripts/: build_context_bundle.py  index_artifacts.py  install.ts  memory.py  retrieve_code_context.py
skills/context-memory/: SKILL.md
skills/context-memory/agents/: openai.yaml
skills/context-memory/references/: REFERENCE.md  bundle-policy.md  discovery-and-indexing.md  durability-and-records.md  retrieval-order.md  script-usage.md
skills/context-memory/scripts/: memory.py  memory.ts  memory_tool.py  memory_workflow.py
tests/: install.test.ts  memory.test.ts  test_installer.py  test_memory_service.py  test_skill_scripts.py
tools/: __init__.py
tools/memory_service/: __init__.py  cli.py  db.py  install_skills.py  installer.py  runner.py  service.py
