[project]
name = "memory-module"
version = "0.1.0"
description = "Repo-local memory service and skill installer for coding agents."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
install-memory-skills = "tools.memory_service.installer:main"
memory-skill-runner = "tools.memory_service.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
